class update